- ADIF log Import
- LoTW log Import


Changelog 2.4
- Enhancement: Ported from Qt5 to Qt6.
- Enhancement: Refactoring of several classes.
- Enhancement: SQLi protection of some queries.
- Enhancement: Improve how the cty.csv file (countries file) is read.
- Enhancement: Update the entities table to make UTC real instead of int (e.g. India is -5.5 UTC)
- BugFix: Fixed the ISO name for Togo.


Mar 2024 - 2.3.4
- BugFix: After Editing a QSO, lotw_qsl_rcvd is emptied (Closes #656, #659) (TNX N6PAZ, EA5WA)
- Bugfix: Keep data of SAT tab when entering a QSO stopped working. (TNX EA5WA)
- BugFix: When editing a split QSO, if TX Frequency is modified, split is disabled and frequencies made equal. (EA5WA)
- BugFix: Incorrect CQ zone saved to DataBase (Closes #666) (EA5WA)
- BugFix: FO/x calls are not properly identified/stored (Closes #677) (EA5WA)
- BugFix: Minor CQz & ITUz bugfixes that could, potentially accept CQ or ITU zones being 0.
- Bugfix: Several fields do not meet ADIF specification (Closes #669)
- Bugfix: DX-Cluster activity file can't be edit with normal txt file. (Closes #682)
- Bugfix: QSO_COMPLETE field in database needs to be redefined (Closes #680)
- Bugfix: QRZ.com QSO status was not properly working. (Closes #664)
- Bugfix: Alternative location for logbook.dat was not working properly (Closes #653)
- Bugfix: Clarify how to use mode / submode in the DB (Closes #650)
- Bugfix: Cleared some warning errors about the DB notbeing created in the console.
- Enhancement: Refactored the getADIFQSO/getADIFFromQSOQuery to have just one single point of ADIF creation.
- Translations: Danish (TNX Peter), Russian (YL3GBC), Spanish (EA4K)

Dec 2023 - 2.3.3
- WIP: Started to reduce the possibility of SQLi with the use of prepared statements.
- Bugfix: Sat QSO edit was not showing the worked SAT (Closes #645)
- Bugfix: After editing a QSO, the restore was not working properly. (Closes #649)